[package]
name = "hc_zome_dna_auth_resolver_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
# :DUPE: hdk-rust-revid
hdk = "0.0"
holo_hash = "0.0"

hc_zome_dna_auth_resolver_rpc = { path = "../rpc" }
hc_zome_dna_auth_resolver_storage = { path = "../storage" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
