[package]
name = "hc_zome_dna_auth_resolver_rpc"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
holo_hash = "0.0"
holochain_zome_types = { version = "0.0", default-features = false }
holochain_serialized_bytes = "0.0"

[lib]
crate-type = ["lib"]
