[package]
name = "hc_zome_dna_auth_resolver_rpc"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2021"

[dependencies]
serde = "1"
holo_hash = "0.1.1"
holochain_zome_types = { version = "0.1.1", default-features = false }
holochain_serialized_bytes = "0.0.51"

[lib]
crate-type = ["lib"]
