[package]
name = "hc_zome_dna_auth_resolver_rpc"
version = "0.2.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
holo_hash = { workspace = true }
holochain_zome_types = { workspace = true }
holochain_serialized_bytes = { workspace = true }

[lib]
crate-type = ["lib"]
