[package]
name = "hc_zome_dna_auth_resolver_storage"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
hdk = { workspace = true }
holo_hash = { workspace = true }

hc_zome_dna_auth_resolver_core = { path = "../core" }

[lib]
crate-type = ["lib"]
