[package]
name = "hc_zome_dna_auth_resolver"
version = "0.2.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true }
hdk = { workspace = true }

hc_zome_dna_auth_resolver_rpc = { path = "../rpc" }
hc_zome_dna_auth_resolver_storage = { path = "../storage" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
